# rust_projects

./: .gitignore
api_apps/local_file_uploader/: docker-compose.yml
api_apps/local_file_uploader/backend/: Dockerfile
api_apps/local_file_uploader/frontend/: Cargo.toml  Dockerfile
cli/calc/debt_calc/: Cargo.toml
cli/calc/income_calc/: Cargo.toml
cli/calc/mortgage_calc/: Cargo.toml  README.md  amortization_schedule.txt
cli/calc/mortgage_capacity/: Cargo.toml  README.md
cli/calc/mortgage_payment/: Cargo.toml  README.md  amortization_schedule.txt
cli/calculator/src/: handlers.rs  main.rs
cli/debt_calc/: README.md
cli/debt_calc/src/: handlers.rs  main.rs
cli/grrs/: test.txt
cli/grrs/src/: main.rs
cli/income_calc/src/: handlers.rs  main.rs
cli/internet/dns_lookup/: Cargo.toml
cli/internet/network_traffic_analyser/: Cargo.toml
cli/internet/ping_utility/: Cargo.toml  README.md
cli/internet/port_scanner/: Cargo.toml  README.md
cli/kelly_criterion/: Cargo.toml  README.md\
cli/kelly_criterion/src/: handlers.rs  main.rs
cli/mortgage_calc/: Cargo.toml  README.md  amortization_schedule.txt
cli/port_scanner/: README.md
cli/pw_generator/: README.md
gui/: README.md
web/: README.md
web/api/chatapi/: Cargo.toml
web/api/invoicedirect/: Cargo.toml
web/api/invoicedirect/src/: main.rs
web/api/invoicedirect/src/app/: mod.rs  routes.rs
web/api/invoicedirect/src/db/: conn.rs  mod.rs
web/api/invoicedirect/src/handlers/: customer_handler.rs  init_db.rs  mod.rs
web/api/invoicedirect/src/models/: customer.rs  mod.rs
(+36 files in other folders)
