[package]
name = "invoicedirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.9.0"
sqlx = "0.7.2"
serde = "1.0.188"
dotenv = "0.15.0"
duckdb = "0.8.1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
